--- a/app/globals.css
+++ b/app/globals.css
@@ -65,6 +65,7 @@ body {
 
 .savingsNumber{
   font-size: x-large;
+  width: 140px;
 }
 
 .savingsTopRow {
@@ -88,6 +89,7 @@ body {
 
 .savingsContainer{
   padding-top: 30px;
+  width: 45%;
 }
 
 .savingsForegroundBar{
@@ -97,25 +99,39 @@ body {
 
 /* Resources */
 
-.resourceContainer{
-  padding-top: 15px;
-}
-
-.resourceDisplay{
+.resourcesColumn{
+  width: 50%;
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  flex-direction: column;
   gap: 20px;
 }
 
-.resourceNumber{
-  font-size: x-large;
-}
-
-.dynamicDisplay{
+.resourcesContainer{
+  width: 75%;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+  padding: 20px;
+  gap: 20px;
+  justify-content: center;
+}
+
+.resourceContainer{
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(255, 255, 255, 0.542);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border: 4px solid;
+  border-radius: 10px;
+  padding: 8px;
   align-items: center;
+  width: 300px;
+}
+
+.labelContainer{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .buttonsContainer{
@@ -123,10 +139,11 @@ body {
   flex-direction: row;
   align-items: center;
   gap: 5px;
+  position: relative;
 }
 
 .button{
-  width: 40px;
+  width: 20px;
   padding: 10px 30px 10px 10px;
   border-radius: 20px;
   border: 2px transparent solid;
@@ -137,22 +154,51 @@ body {
   background-color: rgb(4, 180, 255);
 }
 
-.backgroundBar{
-  margin-top: -13px;
-  margin-left: 15px;
-  width: 475px;
-  height: 26px;
-  position: absolute;
-  background-color: #dfdfdf;
-  border: 2px black solid;
+.buttonDisabled{
+  width: 20px;
+  padding: 10px 30px 10px 10px;
+  border-radius: 20px;
+  border: 2px transparent solid;
 }
 
-.foregroundBar{
-  margin-top: -11px;
-  margin-left: 17px;
-  height: 22px;
+.buttonDisabled:hover{
+  border: 2px black solid;
+  background-color: rgb(184, 184, 184);
+}
+
+.nextDescriptionContainter{
+  width: 200px;
+  height: 150px;
+  border: 1px black solid;
   position: absolute;
-  background-color: rgb(4, 180, 255);
+  bottom: 0px;
+  left: 120px;
+  background-color: rgb(255, 255, 255);
+  padding: 5px;
+}
+
+.resourceName{
+  font-size: x-large;
+}
+
+.resourceNumber{
+  font-size: large;
+  width: 11px;
+  /*background-color: green;*/
+}
+
+.descriptionContainer{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+  height: 70px;
+}
+
+.resourceDescription{
+  height: 50px;
+  /*background-color: purple;*/
+  width: 100%;
 }
 
 /* Next buttons */
