--- a/app/globals.css
+++ b/app/globals.css
@@ -2,12 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
+/*
+match the aesthetic of the cards
+maybe the same thickness but a lighter
+make the background white
+adjust the bar to be longer
+make the savings the same size as all other text
+card header small and bold
+add icons for each card
+*/
+
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
+  --background-start-rgb: 255, 255, 255;
   --background-end-rgb: 255, 255, 255;
 }
 
+main {
+  width: 980px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: flex-start;
+}
 
 body {
   color: rgb(var(--foreground-rgb));
@@ -48,17 +64,20 @@ body {
   font-family: Helvetica, Sans-Serif;
   font-size: xx-large;
   padding-top: 15px;
+  padding-left: 20px;
 }
 
 .simulationDescription{
   font-family: Helvetica, Sans-Serif;
   font-size: large;
+  padding-left: 20px;
 }
 
 /* Savings */
 
 .savingsNumber{
-  font-size: x-large;
+  font-size: large;
+  padding-left: 20px;
 }
 
 .savingsTopRow {
@@ -75,14 +94,18 @@ body {
   gap: 10px;
 }
 
+.savingsDescription{
+  font-size: small;
+}
+
 .savingsBottomRowSpacer{
-  width: 127px;
+  width: 105px;
   height: 10px;
 }
 
 .savingsContainer{
   padding-top: 10px;
-  width: 50%;
+  width: 100%;
 }
 
 .savingsForegroundBar{
@@ -100,7 +123,7 @@ body {
 }
 
 .resourcesContainer{
-  width: 80%;
+  width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -116,7 +139,7 @@ body {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   border: 4px solid;
   border-radius: 10px;
-  padding: 8px;
+  padding: 8px 15px 15px 15px;
   align-items: center;
   width: 300px;
 }
@@ -161,17 +184,19 @@ body {
 
 .nextDescriptionContainter{
   width: 200px;
-  height: 150px;
-  border: 1px black solid;
   position: absolute;
   bottom: 0px;
   left: 120px;
   background-color: rgb(255, 255, 255);
-  padding: 5px;
+  padding: 10px;
+  border: 2px solid;
+  border-radius: 10px;
+  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.15), 0 4px 15px 0 rgba(0, 0, 0, 0.14);
 }
 
 .resourceName{
-  font-size: x-large;
+  font-size: large;
+  font-weight: 550;
 }
 
 .resourceNumber{
