--- a/app/globals.css
+++ b/app/globals.css
@@ -33,7 +33,7 @@ add icons for each card
 }
 
 main {
-  width: 980px;
+  width: 1170px;
   margin: 0 auto;
   display: flex;
   justify-content: flex-start;
@@ -160,8 +160,9 @@ main {
   border: 2px solid;
   border-radius: 7px;
   padding: 8px 15px 15px 15px;
-  align-items: center;
-  width: 300px;
+  width: 330px;
+  align-items:center;
+  gap: 10px;
 }
 
 .labelContainer{
